<resources>
    <string name="app_name">EVRED</string>
    <string name="title">Evaluacion reflexiva</string>
    <string name="correoUniversitario">Ingrese su correo universitario</string>
    <string name="contraceñaUniversitaria">Ingrese su contraseña</string>

    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Instrucciones1">Por favor califique 1 a 5, siendo 1 la valoración más baja y 5 la valoración más alta.</string>
    <string name="Titulo1">ASPECTOS GENERALES DEL CURSO</string>
    <string name="Titulo2">OBJETIVOS Y CONTENIDOS</string>
    <string name="Titulo3">ASPECTOS METODOLÓGICOS</string>
    <string name="Titulo4">EVALUACIÓN</string>
    <string name="Titulo5">ACTITUD DEL DOCENTE</string>
    <string name="Titulo6">ACTITUD DEL ESTUDIANTE</string>
    <string name="Item1">1. Clase magistral</string>
    <string name="Item2">2. Lecturas</string>
    <string name="Item3">3. Trabajos en equipo</string>
    <string name="Item4">4. Exposiciones</string>
    <string name="Item5">5. Trabajo de campo o en laboratorio </string>
    <string name="Item6">6. Formulación proyecto(s) </string>
    <string name="Item7">7. Discusiones</string>
    <string name="Item8">8. Análisis de casos</string>
    <string name="Pregunta1">1. El desarrollo del curso se ha realizado de acuerdo con los contenidos planeados.</string>
    <string name="Pregunta2">2. La bibliografía recomendada está disponible.</string>
    <string name="Pregunta3">3. El curso promueve la formación investigativa.</string>
    <string name="Pregunta4">4. Los objetivos del curso son claros y alcanzables. </string>
    <string name="Pregunta5">5. Los contenidos abordados están actualizados y acordes con los contextos. </string>
    <string name="Pregunta6">6. Los contenidos brindados le aportan una fundamentación sólida para su vida profesional.</string>
    <string name="Pregunta7">7. Evalúe que tanto facilita su aprendizaje las siguientes estrategias didácticas utilizadas en el curso.</string>
    <string name="Pregunta8">8. El docente promueve el aprendizaje independiente.</string>
    <string name="Pregunta9">9. El docente articula el curso con otros contenidos del programa.</string>
    <string name="Pregunta10">10. El docente promueve el trabajo en equipo y la actitud crítica.</string>
    <string name="Pregunta11">11. El docente aplica y fomenta el uso de las tecnologías de la información y la comunicación (TIC).</string>
    <string name="Pregunta12">12. Las evaluaciones están acordes con la programación académica de la Facultad.</string>
    <string name="Pregunta13">13. Las evaluaciones son claras y acordes con los objetivos y contenidos del curso.</string>
    <string name="Pregunta14">14. El docente evalúa permanentemente el aprendizaje del estudiante durante el desarrollo del curso.</string>
    <string name="Pregunta15">15. Las actividades evaluativas promueven el análisis y la aplicación.</string>
    <string name="Pregunta16">16. El docente Entrega y retroalimenta oportunamente las evaluaciones del curso.</string>
    <string name="Pregunta17">17. Las evaluaciones cumplen con los porcentajes asignados en el programa.</string>
    <string name="Pregunta18">18. El docente tiene capacidad para motivar y despertar interés.</string>
    <string name="Pregunta19">19. El docente trata de manera respetuosa a los estudiantes.</string>
    <string name="Pregunta20">20. El docente cumple con los horarios de clase y citas programadas.</string>
    <string name="Pregunta21">21. El docente está disponible para atender a los estudiantes en horarios diferentes a las clases.</string>
    <string name="Pregunta22">22. Soy puntual en la asistencia a las actividades de mi curso.</string>
    <string name="Pregunta23">23. Atiendo las exigencias de mi curso con el tiempo que debo destinarles.</string>
    <string name="Pregunta24">24. Relaciono lo aprendido en el curso con otros contenidos de mi programa académico.</string>
    <string name="Pregunta25">25. Participo activamente en mi curso.</string>
    <string name="Pregunta26">26. Entrego oportunamente los informes y/o trabajos.</string>
    <string name="Pregunta27">27. Trato respetuosamente a compañeros y profesores.</string>
    <string name="Pregunta28">28. El docente le dio a conocer por medio de algún medio (Internet, fotocopia, e-mail, otro) el programa del curso.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="observaciones">Observaciones o concluciones finales</string>
    <string name="siguiente">Siguiente</string>
    <string name="finalizar">finalizar</string>
    <string name="ning_n_caso">Ningún caso</string>
    <string name="todos_nlos_casos">Todos los casos</string>
    <string name="la_mayor_a_nde_los_casos">La mayoría de los casos</string>
    <string name="algunos_ncasos">Algunos casos</string>
    <string name="PreguntaD1">El comartamiento y el trato que usted recibe de los estudiantes es respetuoso en:</string>
    <string name="PreguntaD2">El comartamiento y el trato que usted brinda de los estudiantes es respetuoso en:</string>
    <string name="PreguntaD3">El cumplimiento de los estudiantes en relación con el horario de clase y las citas programadas se dan en:</string>
    <string name="PreguntaD4">En general, con el desarrollo del curso, usted se encuentra:</string>
    <string name="PreguntaD5">La disponibilidad de recursos(equipos, materiales, material bibliográfico) para la actividad academica es adecuada en:</string>
    <string name="atras">Atras</string>
</resources>
