<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pregunta"
        style="@style/Pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        tools:text="@string/PreguntaD1" />

    <RadioGroup
        android:id="@+id/respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pregunta"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton170"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/todos_nlos_casos" />

        <RadioButton
            android:id="@+id/radioButton171"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/la_mayor_a_nde_los_casos" />

        <RadioButton
            android:id="@+id/radioButton172"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/algunos_ncasos" />

        <RadioButton
            android:id="@+id/radioButton173"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ning_n_caso" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/respuesta"
        android:layout_margin="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/siguiente" />
</RelativeLayout>