<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instrucciones2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Instrucciones1"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/encuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instrucciones2">

        <TextView
            android:id="@+id/pregunta28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="start"
            android:text="@string/Pregunta28" />

        <RadioGroup
            android:id="@+id/Respuesta28"
            style="@style/Respuestas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pregunta28"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/Si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/si" />

            <RadioButton
                android:id="@+id/No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/observaciones"
            style="@style/Pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Respuesta28"
            android:text="@string/observaciones" />

        <EditText
            android:id="@+id/editText"
            tools:targetApi="o"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/observaciones"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </RelativeLayout>

    <Button
        android:id="@+id/finalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_marginStart="dp"
        android:layout_marginLeft="dp"
        android:layout_marginTop="dp"
        android:layout_marginEnd="dp"
        android:layout_marginRight="dp"
        android:layout_marginBottom="dp"
        android:text="@string/finalizar"
        android:layout_alignParentEnd="true" />
</RelativeLayout>