<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instrucciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Instrucciones1"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/encuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/titulo"
            style="@style/Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/Titulo2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Pregunta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="start"
            android:text="@string/Pregunta4" />

        <RadioGroup
            android:id="@+id/Respuesta4"
            style="@style/Respuestas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Pregunta4"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/radioButton21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1" />

            <RadioButton
                android:id="@+id/radioButton22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2" />

            <RadioButton
                android:id="@+id/radioButton23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3" />

            <RadioButton
                android:id="@+id/radioButton24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/radioButton25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5" />
        </RadioGroup>

        <TextView
            android:id="@+id/Pregunta5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Respuesta4"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="start"
            android:text="@string/Pregunta5" />

        <RadioGroup
            android:id="@+id/Respuesta5"
            style="@style/Respuestas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Pregunta5"
            android:layout_margin="16dp">

            <RadioButton
                android:id="@+id/radioButton26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1" />

            <RadioButton
                android:id="@+id/radioButton27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2" />

            <RadioButton
                android:id="@+id/radioButton28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3" />

            <RadioButton
                android:id="@+id/radioButton29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/radioButton30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5" />
        </RadioGroup>

        <TextView
            android:id="@+id/Pregunta6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Respuesta5"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="start"
            android:text="@string/Pregunta6" />

        <RadioGroup
            android:id="@+id/Respuesta6"
            style="@style/Respuestas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Pregunta6"
            android:layout_margin="16dp">

            <RadioButton
                android:id="@+id/radioButton31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1" />

            <RadioButton
                android:id="@+id/radioButton32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2" />

            <RadioButton
                android:id="@+id/radioButton33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3" />

            <RadioButton
                android:id="@+id/radioButton34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/radioButton35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5" />

        </RadioGroup>

    </RelativeLayout>

    <Button
        android:id="@+id/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/siguiente"
        android:layout_alignParentEnd="true" />
</RelativeLayout>